@@ -71,7 +71,7 @@ def create_mesh(context, mesh_struct, coll):
         create_vertex_material(context, principleds, mesh_struct, mesh, b_mesh, name, triangles)
 
         for i, shader in enumerate(mesh_struct.shaders):
-            set_shader_properties(mesh.materials[i], shader)
+            set_shader_properties(mesh.materials[min(i, len(mesh.materials) - 1)], shader)
 
     elif mesh_struct.prelit_vertex:
         create_vertex_material(context, principleds, mesh_struct.prelit_vertex, mesh, b_mesh, name, triangles)
