@@ -256,3 +256,18 @@ class TestMeshImportUtils(TestCase):
         with (patch.object(self, 'warning')) as report_func:
             create_mesh(self, mesh_struct, bpy.context.scene.collection)
             report_func.assert_any_call('texture stage did not have uv coordinates!')
+
+    def test_mesh_import_mesh_has_two_shader_structs_with_single_material(self):
+        mesh_name = 'mesh'
+        mesh_struct = get_mesh(mesh_name, mat_count=1)
+
+        mesh_struct.shaders.append(get_shader())
+        mesh_struct.textures.append(get_texture())
+
+        mesh_struct.mat_info.shader_count = len(mesh_struct.shaders)
+        mesh_struct.mat_info.texture_count = len(mesh_struct.textures)
+
+        try:
+            create_mesh(self, mesh_struct, bpy.context.scene.collection)
+        except Exception as e:
+            raise e
